# ZuvivorEdgeCity

./: .gitignore
GraphConvolutionalNetwork/: input.json  model.compiled  network.onnx  network.py  settings.json  vk.key
SecureInfoRegistry/: .replit  analytics.py  app.py  config.py  generate_icons.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  routes.py  utils.py
SecureInfoRegistry/.cache/nix/: binary-cache-v6.sqlite
SecureInfoRegistry/.cache/replit/env/: latest  latest.json
SecureInfoRegistry/.cache/replit/nix/: env.json
SecureInfoRegistry/.cache/typescript/5.5/: package-lock.json  package.json
SecureInfoRegistry/.local/state/replit/agent/: repl_state.json
SecureInfoRegistry/.upm/: store.json
SecureInfoRegistry/components/: header.tsx
SecureInfoRegistry/static/: manifest.json  offline.html  sw.js
SecureInfoRegistry/static/css/: custom.css
SecureInfoRegistry/static/js/: main.js
SecureInfoRegistry/templates/: admin_dashboard.html  admin_login.html  analytics_dashboard.html  base.html  index.html
stylus/examples/: report.rs
worldid/: package-lock.json
